--- a/team_project.ipynb
+++ b/team_project.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.data.go.kr/data/3074462/fileData.do"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -55,6 +62,23 @@
     "import csv\n",
     "\n",
     "f = open('범죄.csv', encoding='cp949')\n",
+    "data = csv.reader(f)\n",
+    "\n",
+    "for row in data :\n",
+    "    print(row)\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "f = open('crime.csv', encoding='cp949')\n",
     "data = csv.reader(f)\n",
     "\n",
     "for row in data :\n",
@@ -472,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -505,19 +529,23 @@
     "most_common_counts = data.set_index('범죄중분류')[regions].max()\n",
     "most_common_crime_df['발생 건수'] = most_common_counts.values\n",
     "\n",
-    "# 막대 그래프 생성\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.bar(most_common_crime_df['지역'], most_common_crime_df['발생 건수'], color='skyblue')\n",
+    "# subplot의 개수 계산 (지역 수)\n",
+    "num_regions = len(most_common_crime_df['지역'])\n",
     "\n",
-    "# 그래프 설정\n",
-    "for i, value in enumerate(most_common_crime_df['발생 건수']):\n",
-    "    plt.text(i, value, most_common_crime_df['가장 많이 발생한 범죄'][i],\n",
-    "             ha='center', va='bottom', fontsize=5, rotation=45)\n",
+    "# 그래프 생성\n",
+    "fig, axes = plt.subplots(num_regions, 1, figsize=(10, 4 * num_regions))\n",
     "\n",
-    "plt.title('지역별 가장 많이 발생한 범죄 유형', fontsize=16)\n",
-    "plt.xlabel('지역', fontsize=12)\n",
-    "plt.ylabel('발생 건수', fontsize=12)\n",
-    "plt.xticks(rotation=45, fontsize=2)\n",
+    "# 각 지역별로 그래프 생성\n",
+    "for i, region in enumerate(most_common_crime_df['지역']):\n",
+    "    ax = axes[i]\n",
+    "    ax.bar(region, most_common_crime_df.loc[i, '발생 건수'], color='skyblue')\n",
+    "    ax.set_title(f'{region} - 가장 많이 발생한 범죄 유형', fontsize=14)\n",
+    "    ax.set_ylabel('발생 건수', fontsize=12)\n",
+    "    ax.set_xticks([])  # X축 눈금 제거\n",
+    "    ax.text(0, most_common_crime_df.loc[i, '발생 건수'], most_common_crime_df.loc[i, '가장 많이 발생한 범죄'],\n",
+    "            ha='center', va='bottom', fontsize=10)\n",
+    "\n",
+    "# 그래프 간격 조정\n",
     "plt.tight_layout()\n",
     "\n",
     "# 그래프 출력\n",
@@ -633,6 +661,66 @@
     "plt.ylabel('발생 범죄목')\n",
     "plt.title('서울 지역 발생 범죄 수')\n",
     "plt.grid(True, axis='x')  # x축에만 그리드 표시\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# 그래프 출력\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 파일 열기\n",
+    "f = open('crime.csv', encoding='cp949')\n",
+    "data = csv.reader(f)\n",
+    "header = next(data)\n",
+    "\n",
+    "# 범죄목 (헤더의 항목들) 추출\n",
+    "crime_categories = header[3:]\n",
+    "\n",
+    "# 서울 지역 데이터 추출\n",
+    "seoul_result = []\n",
+    "busan_result = []  # 다른 지역(예: 부산) 데이터 추출\n",
+    "\n",
+    "# 각 지역 데이터를 리스트에 추가\n",
+    "for row in data:\n",
+    "    if '서울' in row[0]:  # '서울'이 포함된 행만 처리\n",
+    "        for i in row[3:]:\n",
+    "            seoul_result.append(int(i))\n",
+    "    elif '부산' in row[0]:  # '부산'이 포함된 행만 처리\n",
+    "        for i in row[3:]:\n",
+    "            busan_result.append(int(i))\n",
+    "\n",
+    "f.close()\n",
+    "\n",
+    "# 한 플롯에 두 개의 그래프 생성\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "# 첫 번째 서브플롯: 서울\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.barh(range(len(seoul_result)), seoul_result, color='blue')\n",
+    "plt.yticks(ticks=range(len(crime_categories)), labels=crime_categories)\n",
+    "plt.xlabel('서울 지역 발생 범죄 수')\n",
+    "plt.ylabel('발생 범죄목')\n",
+    "plt.title('서울 지역 발생 범죄 수')\n",
+    "plt.grid(True, axis='x')  # x축에만 그리드 표시\n",
+    "\n",
+    "# 두 번째 서브플롯: 부산\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.barh(range(len(busan_result)), busan_result, color='green')\n",
+    "plt.yticks(ticks=range(len(crime_categories)), labels=crime_categories)\n",
+    "plt.xlabel('부산 지역 발생 범죄 수')\n",
+    "plt.ylabel('발생 범죄목')\n",
+    "plt.title('부산 지역 발생 범죄 수')\n",
+    "plt.grid(True, axis='x')  # x축에만 그리드 표시\n",
+    "\n",
+    "# 그래프 간격 조정\n",
     "plt.tight_layout()\n",
     "\n",
     "# 그래프 출력\n",
